[metadata]
name = zdravomil
version = 0.1.0
url = https://github.com/user-cont/zdravomil
description = Linter bot.
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = GPLv3+
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Software Development
keywords = Dockerfile, linter, bot

[options]
packages = find:

[options.packages.find]
exclude =
    tests
